Add contact form

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto&display=swap");
 
 html {
   height: 100%;
@@ -73,14 +73,18 @@ header {
   display: block;
   box-sizing: border-box;
   padding: 10px 12px;
-  margin-left: 12px;
+  margin-left: 24px;
   line-height: 24px;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 800;
+  color: rgba(255, 255, 255, 1);
 }
 
 .textPlaceholder a,
 .textPlaceholder p {
   font-size: 18px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 800;
   color: rgba(255, 255, 255, 1);
   margin: 0;
@@ -122,7 +126,7 @@ header {
 }
 
 .container h1 {
-  font-family: 'Crete Round', serif;
+  font-family: "Crete Round", serif;
   font-size: 56px;
   font-weight: 500;
   color: rgba(255, 107, 0, 1);
@@ -131,14 +135,14 @@ header {
 
 .container h3,
 .container h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 24px;
   font-weight: 700;
   color: rgba(255, 245, 225, 1);
 }
 
 .container p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 300;
   color: rgba(255, 255, 255, 1);
@@ -173,7 +177,7 @@ header {
   box-sizing: border-box;
   padding-bottom: 40px;
   margin: 0;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-size: 40px;
   font-weight: 400;
   color: rgba(28, 26, 25, 1);
@@ -208,14 +212,14 @@ header {
   display: block;
   box-sizing: border-box;
   margin-top: 24px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-size: 32px;
   font-weight: 400;
   color: rgba(9, 30, 66, 1);
 }
 
 .card p {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 400;
 }
@@ -235,7 +239,7 @@ header {
 }
 
 .tag a {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 15px;
   font-weight: 500;
 }
@@ -266,7 +270,7 @@ header {
   padding: 12px;
   background: rgba(255, 107, 0, 1);
   color: rgba(255, 255, 255, 1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 17px;
   margin: 0;
   font-weight: 700;
@@ -435,7 +439,7 @@ header {
 
 .about p {
   color: rgba(244, 245, 247, 1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   margin-bottom: 36px;
 }
@@ -444,7 +448,7 @@ header {
   margin: 0;
   padding: 12px;
   color: rgba(255, 255, 255, 1);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .categories {
@@ -453,7 +457,7 @@ header {
 
 .element p {
   display: block;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 22px;
   font-weight: 400;
 }
@@ -597,7 +601,7 @@ header {
 /* Form Valdiation */
 .error {
   display: none;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 20px;
   font-weight: 600;
   color: rgb(204, 19, 19);
@@ -649,6 +653,245 @@ header {
   }
 
   .container h3 {
+    font-family: "Inter", sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+  }
+
+  .container p {
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+  }
+
+  #menuButton {
+    display: none;
+  }
+
+  #navigation {
+    display: flex;
+  }
+
+  .toolbar ul {
+    justify-content: space-around;
+  }
+
+  .toolbar .textPlaceholder {
+    padding: 26px;
+    margin: 0;
+  }
+
+  .textPlaceholder a {
+    font-family: "Inter", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .toolbar .textPlaceholder a {
+    font-weight: 600;
+  }
+
+  /* Projects section */
+  .container .works {
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    padding: 0 10vw 40px 10vw;
+    box-sizing: border-box;
+  }
+
+  .works h2 {
+    padding: 0;
+    margin-right: 35px;
+    color: rgba(9, 30, 66, 1);
+  }
+
+  .works .line {
+    flex-grow: 1;
+    width: auto;
+    margin: 0;
+  }
+
+  .gridContainer {
+    padding: 0 10vw;
+    grid-auto-rows: minmax(500px, auto);
+  }
+
+  .featured {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .featured img {
+    flex: 1.5 0.5;
+  }
+
+  .featured .info {
+    flex: 1 1;
+    margin-left: 24px;
+  }
+
+  .card h3 {
+    font-family: "Crete Round", sans-serif;
+    font-weight: 400;
+  }
+
+  .featured h3 {
+    margin-top: 0;
+    font-size: 40px;
+  }
+
+  .card p {
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  .featured .interaction {
+    margin-top: 24px;
+  }
+
+  .other {
+    display: none;
+  }
+
+  .other-desktop {
+    display: flex;
+  }
+
+  /* Modal */
+  .modal {
+    margin: 2em 8em;
+  }
+
+  .modal-grid {
+    grid-template-rows: 50vh;
+    grid-template-columns: 1.5fr 1fr;
+    height: 50vh;
+    width: 100%;
+  }
+
+  .modal-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+
+  /* About */
+  #about {
+    background-color: rgba(38, 38, 38, 1);
+  }
+
+  .about {
+    margin-left: 40px;
+    background-image: url(../images/about-desktop.svg);
+    background-position: right 0%;
+  }
+
+  .about p {
+    width: 46%;
+  }
+
+  .about h1 {
+    font-weight: 400;
+    color: rgba(245, 88, 0, 1);
+  }
+
+  .knowledge {
+    align-items: baseline;
+  }
+
+  .knowledge-parent {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .element p {
+    font-size: 22px;
+  }
+
+  .categories h2 {
+    font-weight: 700;
+    font-size: 32px;
+  }
+
+  /* Contact Form */
+  #contact {
+    padding: 0 7vw;
+  }
+
+  .contact p {
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: left;
+    line-height: 52px;
+    margin-right: 24px;
+    color: rgba(38, 38, 38, 1);
+    flex: 1 1;
+  }
+
+  .contact form {
+    flex: 1.5 1;
+    align-items: baseline;
+  }
+
+  .contact-parent {
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .other .interaction {
+    padding: 17px;
+  }
+
+  /* ID Styling */
+  #presentation h2 {
+    color: rgb(255, 255, 255);
+    font-family: "Inter", sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+  }
+
+  #presentation p {
+    color: rgba(244, 245, 247, 1);
+  }
+}
+
+@media screen and (min-width: 672px) and (max-width: 1000px) {
+  
+  /* Frame and toolbar styling */
+  #presentation {
+    justify-content: flex-start;
+    background-image: url(../images/Illustration-header.svg);
+    background-position: right;
+    background-size: 50%;
+    background-position: 100% -20%;
+  }
+
+
+  #presentation .content {
+    flex-direction: row-reverse;
+    width: 50vw;
+  }
+
+  .content .socialGroup {
+    flex-direction: column;
+    margin-right: 70px;
+  }
+
+
+
+  .container h1 {
+    font-size: 72px;
+    font-weight: 500;
+  }
+
+  .container h3 {
     font-family: 'Inter', sans-serif;
     font-size: 32px;
     font-weight: 500;
@@ -662,7 +905,7 @@ header {
   }
 
   #menuButton {
-    display: none;
+    display: block;
   }
 
   #navigation {
@@ -856,26 +1099,162 @@ header {
   #presentation p {
     color: rgba(244, 245, 247, 1);
   }
-}
 
-@media screen and (min-width: 672px) and (max-width: 1000px) {
-  #presentation {
-    background-size: 25%;
-    height: auto;
+  #menuButton {
+    display: none;
+  }
+  
+  .header_name {
+    border: 1px solid #f55800;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
   }
 
-  #presentation .content {
-    padding: 25vh 0;
-    width: 60vw;
+  .header_sof {
+    align-self: flex-start;
+  }
+
+  .co1 {
+    border: 1px solid #f55800;
+  }
+
+  #navigation {
+    display: block;
+  }
+
+  .header_title {
+    position: absolute;
+    background: #3c3a39;
+    height: 92px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    justify-content: space-between;
+  }
+
+  .port_name {
+    width: 50%;
+    height: 24px;
+    margin-left: 12px;
+    margin-top: 10px;
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-start;
+    color: #fff;
+  }
+
+  .port_nav {
+    display: flex;
+    padding-left: 20px;
+    margin-left: 16.67%;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  .contact_section {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    margin-left: 135px;
+    padding-top: 130px;
+    height: 590x;
+  }
+
+  .contact_header {
+    font-weight: 700;
+    font-family: Inter, sans-serif;
+    font-size: 40px;
+    line-height: 52px;
+    align-items: center;
+    font-style: normal;
+    width: 100%;
+    height: 356px;
+    color: #262626;
+    display: flex;
+    flex-direction: column;
+    position: static;
+    flex-wrap: wrap;
+  }
+
+  .contact_form {
+    margin-right: 24px;
+    margin-left: 24px;
+    width: 684px;
+    height: 630px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: static;
+    justify-content: stretch;
+  }
+
+  .input1 {
+    margin-top: 0%;
+    margin-bottom: 0%;
+    border-bottom: 1px solid #dbd8d7;
+    font-family: inter, sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    padding: 14px;
+    flex-grow: 0;
+    width: 100%;
+  }
+
+  .input2 {
+    border-bottom: 1px solid #dbd8d7;
+    width: 100%;
+    font-family: inter, sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    padding: 14px;
+    margin-top: 39px;
+  }
+
+  .input3 {
+    background-color: #fbf8f7;
+    color: #3c3a39;
+    font-family: Inter, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 15px;
+    line-height: 24px;
+    width: 100%;
+    margin-top: 24px;
+    padding: 14px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  .contact_btn {
+    background-color: #ff6b00;
+    color: #fff;
+    font-family: inter, sans-serif;
+    font-weight: 700;
+    align-items: center;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 3%;
+    text-align: center;
+    padding: 12px;
+    margin-top: 12px;
   }
 }
 
-.input3 {
-  border: 1px solid #767676;
-}
 @media screen and (min-width: 672px) and (max-width: 1230px) {
   .featured {
-    grid-column: 1/span 2;
+    grid-column: 1 / span 2;
   }
 }
 
@@ -885,7 +1264,7 @@ header {
   }
 
   .featured {
-    grid-column: 1/span 3;
+    grid-column: 1 / span 3;
   }
 
   #presentation {
@@ -894,105 +1273,123 @@ header {
 }
 
 .contact_section {
+  margin-top: 120px;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 120px 24px;
-  height: 844px;
-  width: 375px;
-}
-
-.contact_paragraph {
-  display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 327px;
-  height: 216px;
-  margin-left: 24px;
+  flex-direction: column;
 }
 
-.paragh_1 {
-  font-size: 32px;
-  font-style: normal;
+.contact_header {
   font-weight: 700;
+  font-family: Inter, sans-serif;
+  font-size: 32px;
+  line-height: 44px;
   text-align: center;
-  font-family: inter sans-serif;
-  color: #172B4D;
-  ;
+  font-style: normal;
+  color: #172b4d;
+  width: 327px;
 }
 
 .contact_form {
+  margin-top: 73px;
+  margin-right: 24px;
+  margin-left: 24px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+
+.input1,
+.input2 {
+  border-bottom: 1px solid #dbd8d7;
   width: 327px;
-  height: 330px;
-  margin-left: 24px;
-  flex-grow: 0;
-}
-
-.contact_button {
-  font-family: inter sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 17px;
-  line-height: 24px;
-  align-items: center;
-  width: 131px;
-  height: 48px;
-  margin-left: 98px;
-  background-color: #ff6800;
-  margin-top: 24px;
-  margin-bottom: 24px;
-  color: white;
-}
-
-.input1, .input2, .input3 {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
+  font-family: inter, sans-serif;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  color: #3c3a39;
+  padding: 14px;
 }
 
-.input1, .input2 {
-  color: #979493;
-  font-size: 15px;
-  width: 295px;
-  line-height: 24px;
-  font-size: 15px;
-  font-weight: 400;
-  margin-top: 15px;
-  margin-left: 16px;
+.input1 {
+  margin-top: 73px;
 }
 
-input {
-  height: 48px;
-  width: 327px;
-  height: 48px;
-  margin-top: 72px;
+.input2 {
+  margin-top: 39px;
 }
 
 .input3 {
-  margin-left: 12px;
-  margin-right: 12px;
-  margin-top: 12px;
-  margin-bottom: 12px;
+  background-color: #fbf8f7;
+  color: #3c3a39;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
   width: 327px;
   height: 114px;
-  background-color: #fbf8f7;
-  color:#3C3A39;
-  ;
+  margin-top: 24px;
+  padding: 14px;
 }
 
-hr {
-  color: #dbd8d7;
-  height: 1px;
-  width: 327px;
+.contact_btn {
+  background-color: #ff6b00;
+  color: #fff;
+  font-family: inter, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 3%;
+  text-align: center;
+  padding: 12px;
+  margin-top: 24px;
+  margin-bottom: 124px;
+  width: 131px;
 }
 
-.contact_button:hover {
-  background-color: #3C3A39;
+.contact_btn:hover {
+  background-color: #fff5e1;
+  color: #f55800;
+}
+
+.contact_btn:active {
+  background-color: #e05304;
+  color: #f4f1f0;
+}
+
+.header_title {
+  position: absolute;
+  background: #3c3a39;
+  height: 92px;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  justify-content: space-between;
+}
+
+.port_name {
+  width: 50%;
+  height: 24px;
+  margin-left: 12px;
+  margin-top: 10px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-start;
+  color: #fff;
+}
+
+.port_nav {
+  display: flex;
+  padding-left: 20px;
+  margin-left: 16.67%;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
