--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1245,26 +1245,11 @@ header {
     text-align: center;
     padding: 12px;
     margin-top: 12px;
-  }
-}
-
-@media screen and (min-width: 672px) and (max-width: 1230px) {
-  .featured {
-    grid-column: 1 / span 2;
-  }
-}
-
-@media screen and (min-width: 1190px) {
-  .gridContainer {
-    grid-template-columns: repeat(3, 1fr);
+    transition: background-color 100ms;
   }
 
-  .featured {
-    grid-column: 1 / span 3;
-  }
-
-  #presentation {
-    background-size: auto;
+  .contact_btn:hover { 
+    background-color: #2c6e66;
   }
 }
 
@@ -1316,6 +1301,14 @@ header {
   margin-top: 39px;
 }
 
+.input1:hover {
+  transform: translate(10px, 10px);
+}
+
+.input2:hover {
+  transform: translate(10px, 10px);
+}
+
 .input3 {
   background-color: #fbf8f7;
   color: #3c3a39;
@@ -1343,11 +1336,11 @@ header {
   margin-top: 24px;
   margin-bottom: 124px;
   width: 131px;
+  transition: background-color 1s;
 }
 
-.contact_btn:hover {
-  background-color: #fff5e1;
-  color: #f55800;
+.contact_btn:hover { 
+  background-color: #2c6e66;
 }
 
 .contact_btn:active {
