Add Translation effect to textarea

--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1322,6 +1322,11 @@ header {
   padding: 14px;
 }
 
+.input3:hover {
+  transform: translate(10px, 10px);
+  background-color: mintcream;
+}
+
 .contact_btn {
   background-color: #ff6b00;
   color: #fff;
@@ -1336,11 +1341,11 @@ header {
   margin-top: 24px;
   margin-bottom: 124px;
   width: 131px;
-  transition: background-color 1s;
+  transition: background-color 2s;
 }
 
 .contact_btn:hover { 
-  background-color: #2c6e66;
+  background-color: aqua;
 }
 
 .contact_btn:active {
