--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1065,6 +1065,7 @@ header {
   .contact_section {
     display: flex;
     align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: row;
     margin-left: 135px;
     padding-top: 130px;
@@ -1072,19 +1073,21 @@ header {
   }
 
   .contact_header {
-    font-weight: 700;
+    font-weight: bold;
     font-family: Inter, sans-serif;
     font-size: 40px;
     line-height: 52px;
     align-items: center;
     font-style: normal;
-    width: 100%;
+    /* width: 100%; */
+    width: 455px;
     height: 356px;
     color: #262626;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-content: flex-start;
+    margin-top: 130px;
   }
 
   .contact_form {
@@ -1163,27 +1166,4 @@ header {
   #menuButton {
     display: none;
   }
-  
-  .contact_section {
-    /* margin-top: 130px; */
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: row;
-  }
-  
-  .contact_header {
-    margin-top: 130px;
-    font-weight: bold;
-    font-family: Inter, sans-serif;
-    font-size: 40px;
-    line-height: 52px;
-    /* text-align: right; */
-    font-style: normal;
-    color: #172b4d;
-    width: 455px;
-    flex-grow: 0;
-    align-content: flex-start;
-  }
-
 }
